--- a/app/src/main/res/menu/base.xml
+++ b/app/src/main/res/menu/base.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_search"
-        android:icon="?android:attr/actionModeWebSearchDrawable"
+        android:icon="@drawable/ic_search"
         android:orderInCategory="101"
         android:title="@string/action_search"
         app:showAsAction="always" />
