--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#85393D</color>
+    <color name="colorPrimary">#85393d</color>
     <color name="colorPrimaryDark">#85393D</color>
     <color name="colorAccent">#FFFFFF</color>
 </resources>
