--- a/app/src/main/res/layout/content_base.xml
+++ b/app/src/main/res/layout/content_base.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="cosw.eci.edu.android.BaseActivity"
+    tools:context="cosw.eci.edu.android.ui.activity.BaseActivity"
     tools:showIn="@layout/app_bar_base">
 
 
