--- a/app/src/main/res/layout/fragment_list_all.xml
+++ b/app/src/main/res/layout/fragment_list_all.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListAllFragment">
+    tools:context=".ui.fragment.ListAllFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_all"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="ListAll" />
+        android:scrollbars="vertical" />
 
 </FrameLayout>
