--- a/app/src/main/res/layout/fragment_list_joined.xml
+++ b/app/src/main/res/layout/fragment_list_joined.xml
@@ -6,9 +6,11 @@
     tools:context=".ui.fragment.ListJoinedFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_list"
+        android:id="@+id/recycler_view_joined"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical">
+
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
