--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#85393d</color>
     <color name="colorPrimaryDark">#85393D</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#85393D</color>
     <color name="colorEventCost">#2FDD1A</color>
+    <color name="navigationBarColor">#85393D</color>
 </resources>
