--- a/app/src/main/res/layout/activity_edit_profile_information.xml
+++ b/app/src/main/res/layout/activity_edit_profile_information.xml
@@ -4,58 +4,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
     android:orientation="vertical"
     tools:context="cosw.eci.edu.android.ui.activity.EditProfileInformationActivity">
 
 
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingBottom="10dp"
+        android:orientation="vertical">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:paddingTop="@dimen/nav_header_vertical_spacing_image"
+            android:src="@drawable/no_user" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:clickable="true"
+            app:layout_anchor="@+id/image"
+            app:layout_anchorGravity="right|bottom"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
+    </android.support.design.widget.CoordinatorLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="30dp">
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="150dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_information_name"
+                android:inputType="text"
+                android:singleLine="true" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="150dp"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_information_last_name"
+                android:inputType="text"
+                android:singleLine="true" />
+        </android.support.design.widget.TextInputLayout>
+
+    </LinearLayout>
+
+    <!--Nationallity and Lenguage-->
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="10dp"
         android:layout_marginHorizontal="30dp">
         <EditText
+            android:id="@+id/about_you"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/profile_information_name"
+            android:hint="@string/profile_information_about_you"
             android:inputType="text"
             android:singleLine="true"/>
 
-
     </android.support.design.widget.TextInputLayout>
 
-
-
-    <android.support.design.widget.TextInputLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp">
-        <EditText
+        android:layout_marginHorizontal="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/nationality_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/profile_information_name"
-            android:inputType="text"
-            android:singleLine="true"/>
+            android:gravity="center"
+            android:layout_weight="1"
+            android:editable="false"
+            android:text="TextView" />
 
-
-    </android.support.design.widget.TextInputLayout>
-
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp">
-        <EditText
+        <Button
+            android:id="@+id/nationality"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/profile_information_name"
-            android:inputType="text"
-            android:singleLine="true"/>
-
-
-    </android.support.design.widget.TextInputLayout>
-
-
+            android:layout_weight="1"
+            android:text="Nationality" />
+    </LinearLayout>
 
 </LinearLayout>
