--- a/app/src/main/res/layout/activity_edit_profile_information.xml
+++ b/app/src/main/res/layout/activity_edit_profile_information.xml
@@ -113,4 +113,27 @@
             android:text="Nationality" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/lenguages_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:editable="false"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/lenguages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Lenguages" />
+    </LinearLayout>
+
 </LinearLayout>
