--- a/app/src/main/res/layout/activity_edit_profile_information.xml
+++ b/app/src/main/res/layout/activity_edit_profile_information.xml
@@ -129,9 +129,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:editable="false"
+            android:layout_gravity="fill"
             android:gravity="center"
-            android:text="TextView" />
+            android:singleLine="false"
+            android:text="Testing" />
 
         <Button
             android:id="@+id/lenguages"
@@ -139,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/colorAccent"
-            android:text="Lenguages"
+            android:text="Languages"
             android:textColor="@color/cardview_light_background" />
 
     </LinearLayout>
