--- a/app/src/main/res/menu/activity_base_drawer.xml
+++ b/app/src/main/res/menu/activity_base_drawer.xml
@@ -12,7 +12,7 @@
             android:title="@string/editProfile" />
         <item
             android:id="@+id/nav_signOut"
-            android:icon="@drawable/ic_audiotrack_dark"
+            android:icon="@drawable/ic_logout"
             android:title="@string/signOut" />
     </group>
 
