--- a/app/src/main/res/layout/activity_show_event.xml
+++ b/app/src/main/res/layout/activity_show_event.xml
@@ -16,13 +16,6 @@
             android:layout_marginHorizontal="30dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
@@ -32,6 +25,13 @@
                 android:paddingTop="@dimen/nav_header_vertical_spacing_image"
                 android:src="@drawable/no_image" />
 
+            <TextView
+                android:id="@+id/event_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -39,17 +39,8 @@
                 android:orientation="vertical">
 
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Button"
-                    android:background="@color/colorAccent"
-                    android:layout_gravity="center"
-                    android:textColor="@color/cardview_light_background" />
-
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/event_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@android:drawable/ic_menu_recent_history"
@@ -58,7 +49,7 @@
                     tools:isScrollContainer="false" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/event_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@android:drawable/ic_menu_mylocation"
@@ -72,9 +63,10 @@
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/event_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_location"
                     android:text="TextView" />
 
             </LinearLayout>
