--- a/app/src/main/res/layout/activity_create_new_event.xml
+++ b/app/src/main/res/layout/activity_create_new_event.xml
@@ -169,7 +169,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="10dp"
-                    android:drawableLeft="@drawable/ic_audiotrack_light"
+                    android:drawableLeft="@drawable/ic_money"
                     android:hint="@string/new_event_price"
                     android:inputType="number"
                     android:singleLine="true"
