--- a/app/src/main/res/layout/activity_show_event.xml
+++ b/app/src/main/res/layout/activity_show_event.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.ShowEventActivity">
 
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -15,6 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:orientation="vertical">
+
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/image"
@@ -29,8 +34,11 @@
                 android:id="@+id/event_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:gravity="center"
+                android:textSize="30dp"
+                android:text="TextView"
+                android:layout_marginVertical="10dp"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,31 +50,66 @@
                 <TextView
                     android:id="@+id/event_date"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@android:drawable/ic_menu_recent_history"
+                    android:layout_height="30dp"
+                    android:drawableLeft="@drawable/ic_date"
                     android:isScrollContainer="false"
                     android:text="TextView"
+                    android:textSize="20dp"
                     tools:isScrollContainer="false" />
 
                 <TextView
                     android:id="@+id/event_price"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@android:drawable/ic_menu_mylocation"
-                    android:text="TextView" />
+                    android:layout_height="30dp"
+                    android:drawableLeft="@drawable/ic_money"
+                    android:text="TextView"
+                    android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/textView4"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@android:drawable/ic_menu_myplaces"
-                    android:text="TextView" />
+                    android:layout_height="70dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_admin" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/list_admin"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"></android.support.v7.widget.RecyclerView>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView_2"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        app:srcCompat="@drawable/ic_group"
+                        android:layout_gravity="center_vertical"/>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/listParticipants"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"></android.support.v7.widget.RecyclerView>
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/event_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_location"
+                    android:textSize="20dp"
                     android:text="TextView" />
 
             </LinearLayout>
@@ -79,6 +122,25 @@
                 android:layout_marginVertical="10dp"
                 android:layout_weight="1"
                 tools:context=".ui.activity.CreateNewEventActivity" />
+
+            <TextView
+                android:id="@+id/event_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:text="TextView" />
+
+            <Button
+                android:id="@+id/event_join_or_remove_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:text="Button"
+                android:textColor="@color/cardview_light_background"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
 
